Improved work list to display fill horizontal screen viewport on smaller devices. Fixed styling to prevent third party integrations images from outgrowing container in tumee experience modal.

--- a/css/main.css
+++ b/css/main.css
@@ -148,8 +148,8 @@ a {
     margin: 0 0 4px 0;
 }
 
-.work-list {
-    margin: 60px auto;
+.site-section .work-list {
+    margin: 60px -30px;
 }
 
 .work-item {
@@ -222,7 +222,6 @@ a {
 }
 
 .site-section {
-    box-sizing: border-box;
     padding: 30px;
     max-width: 1020px;
     margin: 0 auto;
@@ -240,8 +239,8 @@ a {
 
 .site-section img.image-fill {
     width: 100%;
-    margin-top: 80px;
-    margin-bottom: 80px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .divider {
@@ -259,20 +258,9 @@ a {
     margin: 20px -10px;
 }
 
-.flex-list.spacious .flex-list-item {
-    padding: 20px 10px;
-}
-
 .flex-list-item {
     padding: 10px;
     width: 100%;
-}
-
-.flex-list-item img {
-    max-width: 460px;
-    text-align: center;
-    margin-top: 15px;
-    margin-bottom: 15px;
 }
 
 footer {
@@ -697,6 +685,9 @@ h6.with-divider {
         
     }
 
+    .site-section .work-list {
+        margin: 60px auto;
+    }
     .flex-list {
         flex-direction: row;
         flex-wrap: wrap;
